fixing image stretching on flex

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -48,11 +48,10 @@
 }
 
 @media screen and (max-width: 800px) {
+  .carouselWrap {
+    align-items: center;
+  }
   .carouselWrap > img {
     width: 100%;
-    height: 100%;
-  }
-  .carouselWrap > img:first-of-type {
-    height: initial;
   }
 }
